# sfml-test

./: .gitignore  CMakeLists.txt  README.md  build.sh  plan
apps/: CMakeLists.txt  game_minesweeper.cpp  lobby.cpp  main.cpp  minesweeper.cpp  plan  text_debug.cpp
include/: ergonomics.hpp  game_client.hpp  local_status.hpp  local_ui.hpp  mine_cell.hpp  renderable.hpp  scene_manager.hpp
include/lan/: guest_connection.hpp  lan.hpp  packet.hpp
include/minesweeper/: minesweeper.h
include/mscore/: local_status.hpp
include/msui/: local_ui.hpp
include/widget/: button.hpp  list_view.hpp  widget.hpp
src/: entity.cpp  entity.hpp  game.cpp  game.hpp  game_client.cpp  local_status.cpp  local_ui.cpp  main.cpp  resource_holder.cpp  resource_holder.hpp  resource_holder.inl  scene.cpp  scene.hpp  scene_manager.cpp  textures.cpp  textures.hpp
src/lan/: CMakeLists.txt  guest_connection.cpp  lan.cpp  packet.cpp
src/minesweeper/: CMakeLists.txt  minesweeper.cpp
src/mscore/: CMakeLists.txt  local_status.cpp
src/msui/: CMakeLists.txt  local_ui.cpp
src/widget/: CMakeLists.txt  button.cpp  list_view.cpp  list_view.tpp
